--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="http://www.fontstatic.com/f=sky" />
   </head>
-<body>
+<body> 
 <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
+    <nav class="navbar navbar-custom navbar-fixed-top">
+      <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -26,45 +26,51 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a href="/" class="navbar-brand">
+            موقعنا <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+          </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index.php"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></li>
-            <li><a href="index.php?category=عاجل">عاجل</a></li>
-            <li><a href="index.php?category=اخر_الاخبار">اخر الاخبار</a></li>
-            <li><a href="index.php?category=علمي">علمي</a></li>
-            <li><a href="index.php?category=رياضي">رياضي</a></li>
-            <li><a href="index.php?category=اقتصادي">اقتصادي</a></li>
-            <li><a href="index.php?category=سياسي">سياسي</a></li>
-            <li><a href="index.php?category=محلي">محلي</a></li>
-            <li><a href="index.php?category=امني">امني</a></li>
-            <li><a href="index.php?category=عربي_ودولي">عربي ودولي</a></li>
+          <ul class="nav navbar-nav navbar-left">
+            <li class="active"><a href="#">الرئيسية</a></li>
+            <li><a href="#">معرض الأعمال</a></li>
+            <li><a href="#">المنتجات</a></li>
+            <li><a href="#">الخدمات</a></li>
+            <li><a href="#">من نحن</a></li>
+            <li><a href="#">إتصل بنا</a></li>
           </ul>
-          <div class="nav navbar-nav navbar-left">
-            <form class="form-inline navbar-form search-form" action="index.php" method="get" >
-                <div class="form-group pull-left">
-                    <input type="text" name="بحث" placeholder="إكتب واضغط Enter">
-                    <span class="fa fa-search"></span>
-                </div>
-             </form>
-          </div>
         </div>
       </div>
     </nav>
 
-    <section>
-    <div class="container">
-      <div class="columns">
-        <div class="column">
-        <h1>مرحبا بكم في موقعنا</h1>
-        <p>إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.</p>
-      </div>
-      <div class="column">
-        <img src="images/undraw_design_stats_ne2k.svg">
-      </div>
-      </div>
-      </div>
+    <section class="hero">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <h1>مرحباً بكم في مَوقعنا</h1>
+            <p>إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.</p>
+            <a class="button" href="#services">معرض المشاريع</a>
+            <a class="button" href="#contact"> إتصل بنا</a>
+          </div>
+          <div class="column">
+            <img src="images/hero.svg">
+          </div>
+        </div>
+        </div>
+      <a class="scroll" href="#services"><span></span></a>
     </section>
+
+    <section id="services" class="demo">
+      <h1>Scroll Down Button #2</h1>
+      <a href="#section03"><span></span>Scroll</a>
+    </section>
+  </body>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="index.js"></script>
+
+
+
 
   </body>
 </html>
